tests/errors/runtime/002.ura
// errors/runtime/002 — calling a null (zero-init) function value traps with file:line

main():
    f fn(int) int
    return f(21)